src/test/resources/semantic/custom/reject/tooFewFunctionCallParams3.ul
void main() {
    bar();
}

void foo(int one, int two, string three, boolean four, char five, float six) {
}

void bar() {
    foo(1, 5);
}
